--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.4",
   "private": false,
   "homepage": "/clients/core-client-rcl",
-  "main": "src/rcl/index.js",
+  "main": "build/pankosmia-rcl.umd.js",
+  "module": "build/pankosmia-rcl.es.js",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -29,7 +30,8 @@
     "build": "react-scripts build",
     "build:vite": "vite build",
     "build:package": "vite build",
-    "dev": "vite"
+    "dev": "vite",
+    "prepublishOnly": "rm -rf ./build && npm run build:vite"
   },
   "eslintConfig": {
     "extends": [
