--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "main": "build/pankosmia-rcl.umd.js",
   "module": "build/pankosmia-rcl.es.js",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.2.1",
-    "@mui/material": "^6.2.1",
     "eslint-config-react-app": "^7.0.1",
     "pithekos-lib": "^0.11.4",
     "react": "^17.0.0 || ^18.0.0",
@@ -23,7 +19,11 @@
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
