--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "build/pankosmia-rcl.es.js",
   "dependencies": {
     "eslint-config-react-app": "^7.0.1",
+    "notistack": "^3.0.1",
     "pithekos-lib": "^0.11.4",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
@@ -18,12 +19,12 @@
     "vite": "^6.0.7"
   },
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.2.1",
-    "@mui/material": "^6.2.1"
+    "@mui/material": "^6.2.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
