--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
   "name": "pankosmia-rcl",
-  "version": "0.1.14",
+  "version": "0.1.16",
   "private": false,
   "homepage": "/clients/core-client-rcl",
-  "main": "dist/pankosmia-rcl.umd.js",
-  "module": "dist/pankosmia-rcl.es.js",
-  "type": "module",
+  "main": "build/pankosmia-rcl.umd.js",
+  "module": "build/pankosmia-rcl.es.js",
   "dependencies": {
-    "notistack": "^3.0.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "eslint-config-react-app": "^7.0.1",
     "pithekos-lib": "^0.11.4",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "vite": "^6.0.7",
-    "@vitejs/plugin-react": "^4.3.4"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@vitejs/plugin-react": "^4.3.4",
+    "react-scripts": "5.0.1",
+    "vite": "^6.0.7"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.2.1",
-    "@mui/material": "^6.2.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "scripts": {
-    "build": "node build.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "build:vite": "vite build",
     "build:package": "vite build",
     "dev": "vite",
